--- a/SwiftStyleKitSample/StyleKitSample/Base.lproj/Main.storyboard
+++ b/SwiftStyleKitSample/StyleKitSample/Base.lproj/Main.storyboard
@@ -90,7 +90,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AYr-aQ-j3K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1763" y="-471"/>
+            <point key="canvasLocation" x="2203" y="-461"/>
         </scene>
         <!--Sliders View Controller-->
         <scene sceneID="2rX-fQ-G0D">
@@ -161,7 +161,46 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kWD-OT-fkl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2642" y="-174"/>
+            <point key="canvasLocation" x="2825" y="-145"/>
+        </scene>
+        <!--Text Views View Controller-->
+        <scene sceneID="KYM-xH-HDT">
+            <objects>
+                <viewController id="x1R-0c-sAf" customClass="TextViewsViewController" customModule="StyleKitSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ubM-RH-Ltc"/>
+                        <viewControllerLayoutGuide type="bottom" id="etD-n7-wgN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bki-Kg-ulz">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WcV-KA-ege">
+                                <rect key="frame" x="20" y="20" width="560" height="496"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="styleTag" value="T1"/>
+                                </userDefinedRuntimeAttributes>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="WcV-KA-ege" secondAttribute="trailing" constant="20" id="0KJ-Pl-Nvg"/>
+                            <constraint firstItem="WcV-KA-ege" firstAttribute="leading" secondItem="bki-Kg-ulz" secondAttribute="leading" constant="20" id="7HD-I4-gnd"/>
+                            <constraint firstItem="WcV-KA-ege" firstAttribute="top" secondItem="ubM-RH-Ltc" secondAttribute="bottom" constant="20" id="L3u-5m-bYY"/>
+                            <constraint firstItem="etD-n7-wgN" firstAttribute="top" secondItem="WcV-KA-ege" secondAttribute="bottom" constant="20" id="sY7-7A-mPw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outletCollection property="textViews" destination="WcV-KA-ege" collectionClass="NSMutableArray" id="62Z-pO-cXc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ngx-bT-epj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1942" y="-1203"/>
         </scene>
         <!--StyleKit Catalog-->
         <scene sceneID="92v-eU-MGr">
@@ -312,6 +351,26 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="5Y8-bE-MAH" kind="show" id="1Kd-jY-853"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="exH-xL-D77" style="IBUITableViewCellStyleDefault" id="OAa-Ys-mIi">
+                                        <rect key="frame" x="0.0" y="308" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OAa-Ys-mIi" id="a1P-bx-UI2">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Text Views" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="exH-xL-D77">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="x1R-0c-sAf" kind="show" id="Pjk-q8-E8v"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
